--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Radiant Sculpture</title>
 </head>
 <body>
-    <h1>Testing out stuff</h1>
+    <header>
+        <nav>
+            <div class="logo">Radiant Sculpture</div>
+            <ul class="nav-links">
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <h1>Welcome to Radiant Sculpture</h1>
+        <p>Your destination for exquisite art and craftsmanship.</p>
+        <a href="#learn-more" class="cta-button">Learn More</a>
+    </section>
+
+    <!-- More sections (About Us, Services, Contact, Testimonials, Portfolio, etc.) can be added here -->
+
 </body>
 </html>
